# poker-hub

./: .env.example  .gitignore  README.md  main.py  requirements.txt
backend/: config.py  notes.py  requirements.txt  setup.cfg  setup.py
backend/api/: stats_api.py
backend/collector/: history_collector.py
backend/example_hands/: all-in-prelop-no-bounty.txt  multiple-side-pots.txt  preflop-limp-jam-fold.txt  preflop-three-bet-fold.txt  preflop-walk.txt  showdown-elimination.txt  showdown.txt  side-pots-and-split-pots.txt  split-pot.txt  turn-no-showdown.txt
backend/models/: __init__.py  action.py  base.py  hand.py  hand_file.py  hand_participant.py  player.py  pot.py  pot_winner.py  tournament.py
backend/parser/: hand_parser.py  new_hand_parser.py
backend/parser/components/: __init__.py  action_parser.py  base_parser.py  player_parser.py  pot_parser.py  tournament_parser.py
backend/poker_notes/: README.md  db_utils.py  export_notes.py  import_notes.py  notes_manager.py  xml_utils.py
backend/storage/: database.py
backend/tests/parser/: test_action_parser.py  test_basic_hands.py  test_player_parser.py  test_pot_parser.py  test_tournament_parser.py
backend/tests/poker_notes/: test_import_export.py  test_xml_utils.py
frontend/: package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/src/: App.vue
poker_hub/: __init__.py  config.py
poker_hub/api/: __init__.py  stats_api.py
poker_hub/collector/: history_collector.py
poker_hub/storage/: database.py
poker_hud/: __init__.py  notes.py
poker_hud/parser/: hand_parser.py
(+14 files in other folders)
