[metadata]
name = poker-hud
version = 0.1.0
description = Poker HUD hand history parser
author = Chris Chambers
license = MIT

[options]
packages = find:
install_requires =
    sqlalchemy==1.4.50
    lxml
    fastapi==0.104.1
    uvicorn==0.23.2
    watchdog==3.0.0
    python-dotenv==1.0.0

[options.packages.find]
where = .
